--- a/src/components/home/purpose/PurposeContent.css
+++ b/src/components/home/purpose/PurposeContent.css
@@ -3,7 +3,7 @@
     src: url(../../../asset/Lato-Medium_0.ttf);
 }
 
-.topic-header {
+.purpose-header {
     background-color: #43a6df;
     font-size: 14px;
     padding: 7px;
@@ -16,39 +16,39 @@
     min-height: 35px;
 }
 
-.topic-infor {
+.purpose-infor {
     border-right: 1px solid white;
 }
 
-.topic-header .topic-infor {
+.purpose-header .purpose-infor {
     float: left;
     font-size: 16px;
     text-align: center !important;
     color: white;
 }
 
-.topic-infor.author {
+.purpose-infor.author {
     width: 15%;
 }
 
-.topic-infor.title {
+.purpose-infor.title {
     width: 40%;
 }
 
-.topic-infor.purpose {
+.purpose-infor.topic {
+    width: 33%;
     margin-top: 0px;
-    width: 25%;
 }
 
-.topic-infor.like {
+.purpose-infor.like {
     width: 10%;
 }
 
-.topic-infor.comment {
-    width: 15%;
+.purpose-infor.comment {
+    width: 11%;
 }
 
-.topic-infor.time {
+.purpose-infor.time {
     width: 20%;
     border-right: none;
 }
