--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -19,7 +19,6 @@ div {
     background: #fff;
     padding: 5px 7px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); 
-
 }
 
 .logo {
@@ -62,9 +61,9 @@ a.nav:hover {
     color: orange;
 }
 
-#title {
+#page-title {
     text-align: center;
-    margin-top: 1em;
+    margin-top: 0.3em;
     color: black;
     font-size: 24px;
     line-height: 25px;
