--- a/src/components/home/Purpose.css
+++ b/src/components/home/Purpose.css
@@ -68,20 +68,36 @@ span.cat-name {
     flex-grow: 1;
 }
 
+.purpose-item1, .purpose-item2, .purpose-item3, .purpose-item4 {
+    cursor: pointer;
+}
+
 .purpose-item1 {
     background-color: red;
+}
+.purpose-item1:hover {
+    background-color: rgba(255, 0, 0, 0.585);
 }
 
 .purpose-item2 {
     background-color: green;
 }
+.purpose-item2:hover {
+    background-color: rgba(0, 128, 0, 0.511);
+}
 
 .purpose-item3 {
     background-color: rgb(152, 6, 152);
 }
+.purpose-item3:hover {
+    background-color: rgba(152, 6, 152, 0.508);
+}
 
 .purpose-item4 {
     background-color: rgb(0, 17, 255);
+}
+.purpose-item4:hover {
+    background-color: rgba(0, 17, 255, 0.467);
 }
 
 [class^="purpose-item"] > a {
@@ -91,20 +107,5 @@ span.cat-name {
     font-size: 16px;
     line-height: 1.5;
     text-decoration: none;
-    direction: ltr;
-    unicode-bidi: embed;
-    border: none;
     cursor: pointer;
-}
-
-.purpose-item a:hover {
-    color: #08c0ee;
-}
-
-.purpose-item:nth-child(even){
-    border-left: 3px solid #ffffff;
-}
-
-.purpose-item:nth-child(2n){
-    border-left: none !important;
 }
