--- a/src/components/home/topic/Topic1.css
+++ b/src/components/home/topic/Topic1.css
@@ -7,8 +7,8 @@
     background: white;
     padding: 10px 20px;
     margin-bottom: 30px;
-    border: 5px solid #00c62b;
-    border-radius: 5px;
+    border: 7px solid #00c62b;
+    border-radius: 10px;
 }
 
 #topic1-item {
@@ -17,7 +17,7 @@
 }
 
 #topic1-title {
-    color: #00c62b;
+    color: #949895;
     font-size: 20px;
     font-weight: bold;
     font-family: "Lato", sans-serif;
