--- a/src/components/home/UserInfo.css
+++ b/src/components/home/UserInfo.css
@@ -26,3 +26,115 @@
     font-family: "Lato", sans-serif;
     line-height: 50px;
 }
+
+.user-avatar-and-username {
+    background: linear-gradient(45deg, red, blue);
+    margin-bottom: 50px;
+    margin-left: 50%;
+    padding: 25px;
+    display: inline-block;
+}
+
+.default-avatar {
+    width: 150px; 
+    height: 150px;
+    border-radius: 50%;
+}
+
+.user-avatar-and-username h1 {
+    color: white;
+    margin-top: 5px;
+    font-size: 32px;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "Lato", sans-serif;
+}
+
+.user-info {
+    background-color: orange;
+    padding: 50px;
+}
+
+.user-stats {
+    padding: 50px;
+    background-color: orange;
+}
+
+.edit-user-form {
+    background-color: orange;
+    padding: 50px;
+}
+
+.user-info h2 {
+    font-size: 24px;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+    margin-bottom: 50px;
+}
+
+.user-info p {
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
+    padding-bottom: 10px;
+}
+
+.user-stats h2 {
+    font-size: 24px;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+    margin-bottom: 50px;
+}
+
+.user-stats p {
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
+    padding-bottom: 10px;
+}
+
+.edit-user-form h2 {
+    font-size: 24px;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+    margin-bottom: 50px;
+}
+
+.edit-user-form .form-group {
+    margin-bottom: 15px;
+}
+
+.edit-user-form .form-group label {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.edit-user-form .form-group input {
+    font-size: 16px;
+    padding: 4px;
+}
+
+.tab-content {
+    text-align: center;
+    margin-right: 25%;
+}
+
+.tabs button {
+    background-color: #3142de;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 10px;
+    margin: 0 5px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.tabs button:hover {
+    background-color: #3142de6d;
+    border-color: #aaa;
+}
+
+.tabs button.active {
+    background-color: orange;
+    border-color: #888;
+    font-weight: bold;
+}
+
