--- a/src/components/login/LogIn.css
+++ b/src/components/login/LogIn.css
@@ -118,6 +118,7 @@ button[type="submit"]:active {
 .google {
     width: 250px; 
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .facebook {
@@ -127,4 +128,10 @@ button[type="submit"]:active {
 
 .facebook-login {
     margin-bottom: 15px;
+}
+
+.loading-message {
+    margin-bottom: 5px;
+    color: green;
+    font-weight: bold;
 }
