--- a/src/components/home/purpose/Purpose4.css
+++ b/src/components/home/purpose/Purpose4.css
@@ -16,3 +16,21 @@
     font-family: "Lato", sans-serif;
     line-height: 50px;
 }
+
+.purpose4-table-heading {
+    background-color: #4353ff;
+    line-height: 40px;
+    color: white;
+    font-size: 20px;
+}
+
+.purpose4-table-body {
+    background-color: rgb(214, 217, 251);
+    font-size: 15px;
+}
+
+.purpose4-table-body td {
+    font-size: 17px;
+    font-weight: normal;
+    font-family: "Lato", sans-serif;
+}
