--- a/src/components/home/UserInfo.css
+++ b/src/components/home/UserInfo.css
@@ -152,8 +152,13 @@
 
 .user-posts table {
     margin-top: 20px;
-    border-collapse: separate;
-    border-spacing: 0px 15px;
+    border-collapse: collapse;
+    background: antiquewhite;   
+}
+
+.user-posts tbody {
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
 }
 
 .user-posts th, .user-posts td {
@@ -161,13 +166,21 @@
     padding-right: 1px;
 }
 
+.user-posts table tr td, .user-posts table tr th {
+    padding: 6px;
+}
+
 .user-posts th:last-child, .user-posts td:last-child {
     border-right: none;
 }
 
+.user-posts table tr {
+    border-bottom: 2px solid white; 
+}
+
 .user-posts th.title-column, 
 .user-posts td.title-column {
-    width: 175px;
+    width: 225px;
 }
 
 .user-posts th.topic-column, 
@@ -182,7 +195,7 @@
 
 .user-posts th.likes-column, 
 .user-posts td.likes-column {
-    width: 100px;
+    width: 115px;
 }
 
 .user-posts th.comments-column, 
