--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -68,15 +68,18 @@ a.nav:hover {
     font-size: 24px;
     line-height: 25px;
     padding: 2px 0 15px 0;
-    font-weight: normal;
+    font-weight: bold;
     font-family: inherit;
+    margin-bottom: 15px;
 }
 
 .left-content {
     float: left;
     width: 75%;
     box-sizing: border-box;
+    margin-top: 25px;
 }
+
 
 .purpose {
     margin-top: 50px;
