--- a/src/components/home/purpose/Purpose4.css
+++ b/src/components/home/purpose/Purpose4.css
@@ -4,7 +4,7 @@
 }
 
 .purpose4-bar {
-    background: linear-gradient(90deg, rgb(0, 17, 255), white);
+    background: linear-gradient(90deg, rgba(0, 17, 255, 0.553), white);
     padding: 10px 20px;
     margin-bottom: 50px;
 }
@@ -25,7 +25,7 @@
 }
 
 .purpose4-table-body {
-    background-color: rgb(214, 217, 251);
+    background-color: rgb(228, 229, 245);
     font-size: 15px;
 }
 
