--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(90deg, rgb(147, 215, 255),rgb(0, 162, 255)); 
+    background: rgb(196, 231, 251); 
     margin: 0; 
     padding: 0; 
 }
