--- a/src/components/home/Profile.css
+++ b/src/components/home/Profile.css
@@ -24,7 +24,7 @@
 
 .welcome {
     font-size: 18px;
-    color: pink;
+    color: rgb(0, 120, 241);
     font-family: "Lato", sans-serif;
     margin-bottom: 10px;
 }
