--- a/src/components/home/purpose/Purpose1.css
+++ b/src/components/home/purpose/Purpose1.css
@@ -70,14 +70,14 @@
 }
 
 .purpose1-table-heading {
-    background-color: rgb(255, 43, 43);
+    background-color: rgb(187, 0, 0);
     line-height: 40px;
     color: white;
     font-size: 19px;
 }
 
 .purpose1-table-body {
-    background-color: #f9dada;
+    background-color: #f5f3f3;
     font-size: 15px;
 }
 
