--- a/src/components/home/purpose/Purpose4.css
+++ b/src/components/home/purpose/Purpose4.css
@@ -18,14 +18,14 @@
 }
 
 .purpose4-table-heading {
-    background-color: #4353ff;
+    background-color: #0413b8;
     line-height: 40px;
     color: white;
     font-size: 19px;
 }
 
 .purpose4-table-body {
-    background-color: rgb(228, 229, 245);
+    background-color: rgb(239, 239, 243);
     font-size: 15px;
 }
 
