--- a/src/components/home/topic/Topic1.css
+++ b/src/components/home/topic/Topic1.css
@@ -68,6 +68,7 @@
 
 .topic-posts-table-row-comment {
     color: rgb(0, 225, 255);
+    font-weight: bold;
 }
 
 .topic-posts-table-row-date-posted {
@@ -78,14 +79,24 @@
     border-right: none; 
 }
 
-.topic-posts-table th, .topic-posts-table td {
+.topic-posts-table th {
     padding: 8px;
     text-align: center;
     font-family: "Lato", sans-serif;
-}
+    font-weight: normal;
+}   
+
+.topic-posts-table td {
+    padding: 8px;
+    text-align: center;
+    font-family: "Lato", sans-serif;
+    font-weight: normal;
+    font-weight: bold;
+}   
+
 
 .topic-table-heading {
-    background-color: rgb(0, 208, 255);
+    background-color: rgb(0, 151, 185);
     line-height: 40px;
     color: white;
     font-size: 20px;
@@ -113,8 +124,10 @@ th.topic-posts-table-purpose {
 
 .topic-posts-table-row-likes .like-count {
     color: rgb(0, 255, 0); 
+    font-weight: bold;
 }
 
 .topic-posts-table-row-likes .unlike-count {
     color: red; 
+    font-weight: bold;
 }
