--- a/src/components/home/UserInfo.css
+++ b/src/components/home/UserInfo.css
@@ -219,6 +219,16 @@
     font-size: 16px;
 }
 
+.nothing {
+    font-family: "Lato", sans-serif;
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 10px;
+    text-align: center;
+}
+
 button.password-toggle {
     width: 6%;
     padding: 6px;
